Bug 106613 - UI: Sidebar navigator in Impress/Draw not updated immediately when page/slide is renamed
Summary: UI: Sidebar navigator in Impress/Draw not updated immediately when page/slide...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.4 target:7.4....
Keywords: implementationError
: 137834 (view as bug list)
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2017-03-18 00:33 UTC by Gilward Kukel
Modified: 2021-12-27 11:34 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gilward Kukel 2017-03-18 00:33:36 UTC
Description:
The navigator in Impress/Draw is not updated immediately when a page/slide is renamed.

Steps to Reproduce:
1. in Impress or Draw, open the navigator
2. rename a page/slide


Actual Results:  
navigator does not show the new name immediately

Expected Results:
immediate update of navigator


Reproducible: Always

User Profile Reset: No

Additional Info:
the same in 5.3.1.2.
It worked in 5.2.5.1.


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Xisco Faulí 2017-03-18 13:16:39 UTC Comment hidden (obsolete)
Comment 2 Gilward Kukel 2017-03-18 16:11:13 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2017-03-25 18:13:42 UTC
Repro. It is updated after I add a new slide. It is not updated, if I switch from Navigator to other decks in the sidebar.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 54f9a81a1c041c18d209d7eb4659ac18a3ca76dd
CPU threads: 8; OS: Linux 4.10; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on March 25th 2016
Comment 4 Aron Budea 2017-04-05 22:08:36 UTC Comment hidden (obsolete)
Comment 5 Gilward Kukel 2017-04-05 23:52:00 UTC
(In reply to Aron Budea from comment #4)
> I went back until 4.2.0.4, and renaming the slide (via Slides pane) still
> didn't update Navigator right away. This doesn't look like a regression to
> me.

Sorry, I was wrong to say that it works in 5.2.5.1. I did not know that there was a difference between the separate navigator (F5) and the navigator in the sidebar. The separate one is updated, the sidebar not, also not in 5.2.5.1.
Comment 6 QA Administrators 2018-04-06 02:40:52 UTC Comment hidden (obsolete)
Comment 7 Gilward Kukel 2018-04-11 17:48:52 UTC
still present

Version: 6.0.3.2 (x64)
Build-ID: 8f48d515416608e3a835360314dac7e47fd0b821
CPU-Threads: 4; BS: Windows 6.1; UI-Render: Standard;
Comment 8 Timur 2020-10-29 07:03:19 UTC
*** Bug 137834 has been marked as a duplicate of this bug. ***
Comment 9 Timur 2020-10-29 07:18:14 UTC
Here is the patch from Jim Raykowski that makes sidebar Navigator update as expected:
https://gerrit.libreoffice.org/c/core/+/104988

Jim, thanks, please change to this bug, as a courtesy to 1st time reporters and testers.
Comment 10 Commit Notification 2020-10-30 06:57:22 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/46ecd31445bda45e10d58e937ff468a1a8f17da2

tdf#106613 Draw: Make sidebar Navigator update after slide rename

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2020-10-30 09:39:37 UTC
Verified in

Version: 7.1.0.0.alpha1+
Build ID: ec1f4d3253963ac16d638734ac70dde033e82154
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Jim, thanks for fixing this issue!!
Comment 12 Commit Notification 2020-10-30 12:30:25 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/00a0f45b65a7edfbd1918fe9c0ab0c2a5b14c0b0

tdf#106613 Draw: Make sidebar Navigator update after slide rename

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2021-12-24 22:22:25 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9bfc42015acd6ae3475ab7927ccc006507cc38a2

tdf#146003 tdf#106613 Draw: fix slide rename not updated in Navigator

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2021-12-27 11:34:42 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/f0ae7571b7f0d8b03f6c365d6c24ee69d973c781

tdf#146003 tdf#106613 Draw: fix slide rename not updated in Navigator

It will be available in 7.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.