tdf#106613 Draw: Make sidebar Navigator update after slide rename

Change-Id: I438a06dfd0d19271853bc1efd8098195f6f37ef8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/104988
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>