sd/source/ui/view/drviewsd.cxx
@@ -62,6 +62,9 @@ void DrawViewShell::ExecNavigatorWin( SfxRequest& rReq )
                 if( pNavWin )
                     pNavWin->InitTreeLB( GetDoc() );
             }
+            SfxBindings& rBindings = GetViewFrame()->GetBindings();
+            rBindings.Invalidate(SID_NAVIGATOR_STATE, true);
+            rBindings.Invalidate(SID_NAVIGATOR_PAGENAME, true);
         }
         break;
 
